src/components/footer/Footer.css
.footer{
    margin: 50px 170px;
    display: flex;
    flex-direction: column;
    gap: 30px;

}
.footer-top{
    display: flex;
    justify-content: space-between;
}
.footer-top-left p{
    font-size: 20px;
    max-width: 400px;

}
.top-right{
    display: flex;
    flex-direction: column;
    gap: 30px;
}
.footer-email-input{
    display: flex;
gap: 30px;
padding: 20px 30px;
border-radius: 50px;
background: #32323B;
padding-right: 80px;

}
.footer-email-input input{
    outline: none;
    border: none;background: transparent;
    color: #A0A0A0;
    font-family: Roboto;
    font-size: 18px;
}
.footer-subscribe{
    font-size: 20px;
    padding: 22px 50px;
    border-radius: 50px;
    background: linear-gradient(264deg,#DF8908 -5.09%,#B415FF 106.28%);
    cursor: pointer;
    transition: 0.3s;


}
.footer-bottom{
    display: flex;
    justify-content: space-between;
    font-size: 18px;
}
.footer-bottom-right{
    display: flex;
    gap: 50px;
    margin-bottom: 50px;
}
.footer-email-input:hover{
    border: 2px solid white;
}
.footer-subscribe:hover{
    transform: scale(1.1);
    transition: 0.3s;
}
@media(max-width:768px){
    .footer{
        margin: 50px 70px;
    }
    .footer-top{
        flex-direction: column;
        gap: 50px;
    }
    .footer-bottom{
        display: flex;
        flex-direction: column-reverse;
        margin-bottom: 50px;
    }
}

